Fix hyperlink wrapping

--- a/src/scss/cs/typography.scss
+++ b/src/scss/cs/typography.scss
@@ -126,4 +126,8 @@ div.isaac-nav-link {
   }
 }
 
+a {
+  overflow-wrap: anywhere;
+}
+
 // FIXME ADA pre and code fonts and style need thinking about
